--- a/english.html
+++ b/english.html
@@ -295,6 +295,8 @@ Error message and password prompt
 
 <li>David Byrne</li>
 
+<li>Delicatessen Chez Genevieve</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Dreams we have dreamt</li>
@@ -367,6 +369,8 @@ Error message and password prompt
 
 <li>Love</li>
 
+<li>Matza balls soup</li>
+
 <li>Meals</li>
 
 <li>Meir Ariel</li>
@@ -405,6 +409,8 @@ Error message and password prompt
 
 <li>Restaurants</li>
 
+<li>Rosh Hashana dinner</li>
+
 <li>Russell</li>
 
 <li>Saraleh would have liked it</li>
@@ -422,6 +428,10 @@ Error message and password prompt
 <li>The blue is already here</li>
 
 <li>The Bridge</li>
+
+<li>The Couscous</li>
+
+<li>The end stays open</li>
 
 <li>The first assembly</li>
 
@@ -8328,7 +8338,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Bridge]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Rosh Hashana dinner]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8348,7 +8358,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215105659968" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215113319547" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8737,6 +8747,14 @@ Be good.
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
+<div created="20200215113637898" modified="20200215113839589" tags="Meals Coffee [[Coffee shops]] [[The kitchen according to Genevieve]] Restaurants" title="Delicatessen Chez Genevieve">
+<pre>
+[img[pictures/delicatessen.jpg]]
+
+
+ &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
+</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -9066,6 +9084,14 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
+<div created="20200215115312612" modified="20200215115447306" tags="Recipes [[Food addicts]] Meals" title="Matza balls soup">
+<pre>
+[img[pictures/marak-im-kneydalach.jpg]]
+
+
+ &lt;&lt;heblink [[מרק עם קניידלך]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213154636920" modified="20200213161123485" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]]" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
@@ -9279,6 +9305,16 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
+<div created="20200215111759981" modified="20200215115526369" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
+<pre>
+[img[pictures/aruchat-rosh-hashana.jpg]]
+
+!!![[Yoyo]]:
+
+Rosh Hashana 2017 was really something. Meaning, in the end of the day it was great. The beginning was good, but in the middle, [[Gura]] became ill with certain bitternessis. The wine she drank did not do well on that matter. Genevieve and Rogge talked about the [[delicatessen|Delicatessen Chez Genevieve]]  that's gonna open up instead of [[the Couscous|The Couscous]]. The two of them talked calmly about the importance of the raw materials, because Genevieve wants to &quot;level up&quot; on that issue. Long story short, Gura gave a revolting speech about how &quot;all of you turned into feinschmeckers&quot;. She also mocked Iry and I and the [[matza balls|Matza balls soup]]: &quot;how far will you go? Where will you run to get a-one-day-old beet or a crab with an ancient taste?&quot; she screamed, stood up and walked to her room. Two hours later, when most of us were watching [[the last episode|The end stays open]] of [[The Sopranos]]. Happy with ourselves. Full of food, drinks, indulgences and the terminal show she showed up looking at us. We smiled at her, she sat down between Eva and Philippe. It was great gummy-a-bearge
+
+ &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
+</div>
 <div created="20200202163339570" modified="20200202163759854" tags="[[Coen sister]] [[Single parent children]]" title="Russell">
 <pre>[img[pictures/rachel.jpg]]
 
@@ -9359,7 +9395,7 @@ And I say:
 
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
-<div created="20200215105718382" modified="20200215110037644" tags="[[TV Series]] TV" title="The Bridge">
+<div created="20200215105718382" modified="20200215115420540" tags="[[TV Series]] TV" title="The Bridge">
 <pre>
 [img[pictures/hagesher.jpg]]
 
@@ -9369,6 +9405,25 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 
  &lt;&lt;heblink [[הגשר]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200215114029313" modified="20200215114214451" tags="Restaurants Meals [[Food addicts]] Kitchens [[The kitchen according to Genevieve]]" title="The Couscous">
+<pre>
+[img[pictures/hacouscous.jpg]]
+
+
+ &lt;&lt;heblink [[הקוסקוס]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200215114358738" modified="20200215114518763" tags="[[The Sopranos]] TV [[TV Series]] [[On the road to somewhere]]" title="The end stays open">
+<pre>
+[img[pictures/sof-hasopranos.jpg]]
+
+ &lt;&lt;heblink [[הסוף נשאר פתוח]]&gt;&gt;
 
 
 </pre>
