--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ארוחת ראש השנה]] [[הסוף נשאר פתוח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215105643472" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215111932304" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10563,12 +10563,16 @@ well,
 
 </pre>
 </div>
-<div created="20170926171537258" modified="20181018173510721" tags="[[חיות אוכל]] [[קופים ממונעים]] ארוחות" title="ארוחת ראש השנה">
+<div created="20170926171537258" modified="20200215112154175" tags="[[חיות אוכל]] [[קופים ממונעים]] ארוחות" title="ארוחת ראש השנה">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[יויו]]:
 
-ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על [[המעדנייה|דליקטסן אצל ז'נבייב]] שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא א-לה-דובונאז'.</pre>
+ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על [[המעדנייה|דליקטסן אצל ז'נבייב]] שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא א-לה-דובונאז'.
+
+&lt;&lt;englink [[Rosh Hashana dinner]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170729122045070" modified="20170729204444850" tags="[[אירי טוענת]]" title="ארנון חן">
 <pre>[img[pictures/arnon-chen.jpg]]
@@ -11866,12 +11870,14 @@ different tastes, but there were things we both love: family, work, people in al
 
 [[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט [[לאלנבי|קפה וממתקים]].</pre>
 </div>
-<div created="20171018115658510" modified="20190415191152585" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה [[בתי קפה]]" title="דליקטסן אצל ז'נבייב">
+<div created="20171018115658510" modified="20200215113943524" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה [[בתי קפה]]" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
 
 !!![[ז'נבייב]]:
 
-זהו, שה ז'נבייב דליקטסן נפתח שלשום. אני מאד שמחה אך זהירה - כי זו בהחלט משימה יומרנית לבחור מה יהיה, מה אני מציגה, הן מבחינת חומרי גלם, הן מבחינת אוכל מוכן. בסופו של דבר ובתוספת החנות הצמודה שהתפנתה, יש חנות, שדלפק האוכל המוכן שבה נמשך לתוך החלל שבו אפשר לאכול בהגשה עצמית. המטבח נשאר באותו גודל ומהחלונות שלו אנו מוציאים, כחלק מהקניה, ירקות מאודים או צרובים על פלנצ'ה. יש גבינות, נקניקים, בשרים. סנדביצ'ים, תבשילים. מבחינת חומרים גלם, כולל פרות וירקות - אנחנו מוכרים ממה שקנינו בשוק לבישול שלנו וגם נותנים מתכונים למי שרוצה להכין בבית, ויש כמובן פינת קפה.</pre>
+זהו, שה ז'נבייב דליקטסן נפתח שלשום. אני מאד שמחה אך זהירה - כי זו בהחלט משימה יומרנית לבחור מה יהיה, מה אני מציגה, הן מבחינת חומרי גלם, הן מבחינת אוכל מוכן. בסופו של דבר ובתוספת החנות הצמודה שהתפנתה, יש חנות, שדלפק האוכל המוכן שבה נמשך לתוך החלל שבו אפשר לאכול בהגשה עצמית. המטבח נשאר באותו גודל ומהחלונות שלו אנו מוציאים, כחלק מהקניה, ירקות מאודים או צרובים על פלנצ'ה. יש גבינות, נקניקים, בשרים. סנדביצ'ים, תבשילים. מבחינת חומרים גלם, כולל פרות וירקות - אנחנו מוכרים ממה שקנינו בשוק לבישול שלנו וגם נותנים מתכונים למי שרוצה להכין בבית, ויש כמובן פינת קפה.
+
+&lt;&lt;englink [[Delicatessen Chez Genevieve]]&gt;&gt;</pre>
 </div>
 <div created="20180307125005127" modified="20200212143727917" tags="סדרות [[חיות אוכל]] טלוויזיה [[כמה שירים כבר אפשר להמציא בכלל]]" title="דם אמיתי">
 <pre>[img[pictures/true-blood.jpg]]
@@ -12132,7 +12138,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום אומנם לא הפך לתחביב שלי, אך אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.</pre>
 </div>
-<div created="20170713130412612" modified="20200215110136451" tags="סדרות טלוויזיה" title="הגשר">
+<div created="20170713130412612" modified="20200215114601513" tags="סדרות טלוויזיה" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
 
 !!![[יויו]]:
@@ -12548,7 +12554,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170923082302700" modified="20200208125831010" tags="הסופרנוס טלוויזיה [[בדרך לאן שהוא]]" title="הסוף נשאר פתוח">
+<div created="20170923082302700" modified="20200215114639324" tags="הסופרנוס טלוויזיה [[בדרך לאן שהוא]]" title="הסוף נשאר פתוח">
 <pre>[img[pictures/sof-hasopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12563,7 +12569,9 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 האיש הגדול הזה בכל מובן שהוא, בסופו של דבר (גם) רוצח, שאנחנו מאוהבים בו. איזכורי הנאציזם, העיסוק במקור הרשע, הזעם, האימפולסיביות, הדכאון.
 
-הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.</pre>
+הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.
+
+&lt;&lt;englink [[The end stays open]]&gt;&gt;</pre>
 </div>
 <div created="20170826115226554" modified="20200213162746383" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
@@ -12671,7 +12679,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161213170938039" modified="20190617133601653" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]] מסעדות מטבחים" title="הקוסקוס">
+<div created="20161213170938039" modified="20200215114305193" tags="[[המטבח על פי ז'נבייב]] ארוחות [[חיות אוכל]] מסעדות מטבחים" title="הקוסקוס">
 <pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
@@ -12690,7 +12698,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-
+&lt;&lt;englink [[The Couscous]]&gt;&gt;
 
 
 
