--- a/english.html
+++ b/english.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>Charlie Kaufman</li>
 
+<li>Chez Panisse</li>
+
 <li>Children</li>
 
 <li>Christmas dinner</li>
@@ -290,6 +292,8 @@ Error message and password prompt
 <li>Coffee and Candies</li>
 
 <li>Coffee shops</li>
+
+<li>Dandan</li>
 
 <li>Dandan went</li>
 
@@ -8338,7 +8342,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Rosh Hashana dinner]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8649,6 +8653,29 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
  &lt;&lt;heblink [[צ'רלי קאופמן]]&gt;&gt;
 . </pre>
 </div>
+<div created="20200215115804719" modified="20200215121559190" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens" title="Chez Panisse">
+<pre>
+!!![[Yoyo]]:
+
+Yes- [[he|Dandan]] wrote us another letter (August 2017), and I'm pasting it here as well:
+
+
+[img[pictures/chez-panisse.jpg]]
+
+
+
+My sisters,
+We arrived home an hour ago, after three days in Berkley, and I'm so thrilled and have to tell you:
+My uncle Mo is celebrating his 60th birthday, and in honor of that occasion, his children, my cousins, Ben (22) and Natalie (20) have decided to take him (and me) out of the house. Ben arrived with his car, and they got us four rooms in a luxurious hotel. We traveled and wandered around, and the highlight for all of us was to eat at [[Chez Panisse|https://en.wikipedia.org/wiki/Chez_Panisse]]. A restaurant that was founded by [[Alice Waters|https://en.wikipedia.org/wiki/Alice_Waters#Slow_Food]]. 
+We ate one day at the [[restaurant|http://www.chezpanisse.com/menus/restaurant-menu/]] and one day at the [[café|http://www.chezpanisse.com/menus/cafe-menu/]].
+The raw materials over there- the fish and the sea food, the meat, the vegetables and the fruits- were just delicious. The attitude of the place reminded me [[the Couscous|The Couscous]] and mostly [[sweet Genevieve|Genevieve]]. 
+I didn’t know the expression [[slow food|https://en.wikipedia.org/wiki/Slow_Food]], I wasn't interested in the [[Californian Kitchen|https://en.wikipedia.org/wiki/California_cuisine]], it was all a complete surprise to me, but suddenly when I was there, mostly when I saw the kitchen's atmosphere and the fun food, I thought about you. About our conversations in the kitchen. About your discussions about food.
+Missing and loving,
+Yours- Dandan.
+
+ &lt;&lt;heblink [[שה פניס]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212205329430" modified="20200212214202150" tags="Mothers [[Single parent children]] [[Dandan went]]" title="Children">
 <pre>[img[pictures/yeladim.jpg]]
 
@@ -8731,6 +8758,14 @@ Be good.
 &lt;&lt;list-links filter:&quot;[tag[Coffee shops]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
+</div>
+<div created="20200215120453473" modified="20200215122630916" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
+<pre>
+[img[pictures/dandan.jpg]]
+
+ &lt;&lt;heblink [[דןדן]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200212171338780" modified="20200212223524288" tags="[[Coen sister]] Mothers Houses [[True stories]]" title="Dandan went">
 <pre>[img[pictures/dandan-nasa.jpg]]
@@ -9351,7 +9386,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
-<div created="20200215103830870" modified="20200215104607574" tags="[[Outer sisters]] Films" title="Spike Lee">
+<div created="20200215103830870" modified="20200215122609709" tags="[[Outer sisters]] Films" title="Spike Lee">
 <pre>
 
 [img[pictures/spike-lee.jpg]]
@@ -9395,7 +9430,7 @@ And I say:
 
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
-<div created="20200215105718382" modified="20200215115420540" tags="[[TV Series]] TV" title="The Bridge">
+<div created="20200215105718382" modified="20200215121523220" tags="[[TV Series]] TV" title="The Bridge">
 <pre>
 [img[pictures/hagesher.jpg]]
 
