--- a/english.html
+++ b/english.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>Charlie Kaufman</li>
 
+<li>Chez Finnie`s</li>
+
 <li>Chez Panisse</li>
 
 <li>Children</li>
@@ -296,6 +298,8 @@ Error message and password prompt
 <li>Dandan</li>
 
 <li>Dandan went</li>
+
+<li>Daniel</li>
 
 <li>David Byrne</li>
 
@@ -8342,7 +8346,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8362,7 +8366,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215113319547" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215124546680" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8653,6 +8657,38 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
  &lt;&lt;heblink [[צ'רלי קאופמן]]&gt;&gt;
 . </pre>
 </div>
+<div created="20200215122951144" modified="20200215124616856" tags="[[Dandan went]] Houses [[Dreams we have dreamt]] Laundry [[True stories]]" title="Chez Finnie`s">
+<pre>
+!!![[Yoyo]]:
+
+Couple of days ago, [[we received|Coen Sisters]] a letter from [[Dandan]], after not hearing from him for about a year. I love him so much and I miss him. With his permission, I'm pasting the letter here:
+
+
+
+[img[pictures/babait-shel-fini.jpg]]
+
+
+My friends,
+I think about you every day, love you and full of agony, and out of the respect I have for your intelligence, I won’t remind it over and over, even though you can all imagine for yourselves, I'm over and over on the edge.
+I've been here for a year already, at Mo's, my sweet uncle, who watches me like you watch a baby. I do activate the remote by myself, but still a baby. 
+Most of the time both of us are in the house. My grandmother passed away last month- until then we've been visiting her every week. I eat well, smoke a lot, watch many [[series|TV Series]] and [[movies|Films]]. Sometimes Mo's children come. I miss you very much. I'm sending a separate letter to [[Gura]].
+
+Before I say my goodbyes, I have to tell you a story who's dedicated to [[Daniel]]:
+
+In New York area, it's not that I was mean, but I was frightened and pretty unexperienced. I used to buy from Finnie and sell. Finnie was a pretty pretty guy, full of tattoos, probably thirty-something years old. He kept his stuff in a closet inside a closet, who was behind a double wall that moved on a trail that was in the door's lintel. On the front wall of this construction were the dryer and shelves with things. All of this heavy structure was operated with a remote. You know that [[Laundry]] is my thing, but this is not a nice story about me. I wasn't supposed to know about this room. By chance, in one of the times that I came to him, he forgot to prepare the stuff for me, and he felt uncomfortable. He trusted me, and showed me the perfected patent. 
+Unfortunately for him, couple of months later I was caught, threatened and I got scared, and snitched, and he got screwed and went to prison, and I turned out as an enormous asshole.
+Few days ago I was in an investigation (I renewed my address to Mo's apartment. I was released pretty fast, because it was clear I had nothing to do with this story, but I also understood that he worked in a pretty large network, who belongs to a dangerous man, and I hope he got out of it).
+I feel sorry for Finnie
+I'm asking for his forgiveness and also for yours. I'm not sure that I deserve you.
+I love you from the bottom of my heart and miss you
+Yours
+Dandan
+
+
+ &lt;&lt;heblink [[בבית של פיני]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200215115804719" modified="20200215121559190" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens" title="Chez Panisse">
 <pre>
 !!![[Yoyo]]:
@@ -8776,6 +8812,12 @@ Be good.
 
 
 </pre>
+</div>
+<div created="20200215124658821" modified="20200215124822177" tags="[[Coen sister]]" title="Daniel">
+<pre>
+[img[pictures/29wJW52SFPcRk5HR.jpg]]
+
+ &lt;&lt;heblink [[דניאל]]&gt;&gt;</pre>
 </div>
 <div created="20200213152525438" modified="20200213152745210" tags="Music Films [[Outer sisters]]" title="David Byrne">
 <pre>[img[pictures/david-byrne.jpg]]
@@ -9386,7 +9428,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
-<div created="20200215103830870" modified="20200215122609709" tags="[[Outer sisters]] Films" title="Spike Lee">
+<div created="20200215103830870" modified="20200215124752573" tags="[[Outer sisters]] Films" title="Spike Lee">
 <pre>
 
 [img[pictures/spike-lee.jpg]]
