--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215120754019" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215123221685" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10606,7 +10606,7 @@ well,
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170811181124336" modified="20181121190225452" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה" title="בבית של פיני">
+<div created="20170811181124336" modified="20200215123714733" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה" title="בבית של פיני">
 <pre>!!![[יויו]]:
 //''''
 לפני כמה ימים [[קיבלנו|האחיות כהן]] מכתב [[מדןדן|דןדן]], אחרי  שלא שמענו ממנו [[שנה בערך|דןדן נסע]]. אני כל כך  אוהב אותו ומתגעגע אליו. באישורו, אני מעתיק לכאן את המכתב:
@@ -10642,7 +10642,9 @@ well,
 
 שלכם 
 
-דןדן</pre>
+דןדן
+
+&lt;&lt;englink [[Chez Finnie`s]]&gt;&gt;</pre>
 </div>
 <div created="20200207101406305" modified="20200212184641238" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="בדרך לאן שהוא">
 <pre>[img[pictures/baderech-lean.jpg]]
@@ -11946,7 +11948,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20161116181512747" modified="20170811193024631" tags="[[אחות כהן]]" title="דניאל">
+<div created="20161116181512747" modified="20200215124909953" tags="[[אחות כהן]]" title="דניאל">
 <pre>[img[pictures/29wJW52SFPcRk5HR.jpg]]
 
 !!![[דןדן]]:
@@ -11957,6 +11959,8 @@ different tastes, but there were things we both love: family, work, people in al
 הוא מצטרף אל אלפרד ואלי לא מעט כשאנחנו משפצים רהיטים, ובודאות הוא ראה בדיוק מה קרה לי בניו יורק כשהייתי בן 17 [[בבית של פיני]]. הוא מעשן וויד רק פה ושם, ובאותו יום עישנו.
 [[צ'נג]] והוא התחילו את ה[[וויקי שלנו|האחיות כהן]], ובכך אפשרו לכל אחד מאיתנו למלא וליצור עוד ועוד וויקי'ס ובתנאי [[ששרל'ה הייתה אוהבת את זה|שרלה הייתה אוהבת את זה]].
 
+
+&lt;&lt;englink [[Daniel]]&gt;&gt;
 </pre>
 </div>
 <div created="20170717145725241" modified="20170719151609598" tags="[[אירי וגורה]]" title="דעתניות">
@@ -12139,7 +12143,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום אומנם לא הפך לתחביב שלי, אך אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.</pre>
 </div>
-<div created="20170713130412612" modified="20200215120650976" tags="סדרות טלוויזיה" title="הגשר">
+<div created="20170713130412612" modified="20200215124840642" tags="סדרות טלוויזיה" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
 
 !!![[יויו]]:
