--- a/english.html
+++ b/english.html
@@ -8346,7 +8346,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[Chez Panisse]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8567,8 +8567,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
 </div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
-<pre>
-[img[pictures/nekiyey-capaim.jpg]]
+<pre>[img[pictures/nekiyey-capaim.jpg]]
 
 '': In the animal farm'', the animals display faith.
 
@@ -8621,15 +8620,13 @@ Is where I want to be
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
 <div created="20200213181607810" modified="20200213212352870" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
-<pre>
-[img[pictures/blue-marble.jpg]]
+<pre>[img[pictures/blue-marble.jpg]]
 
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
 <div created="20200213183239085" modified="20200213212523487" tags="[[Monkeys with car keys]]" title="Cat Sisters">
-<pre>
-[img[pictures/achayot-chatul.jpg]]
+<pre>[img[pictures/achayot-chatul.jpg]]
 
 !!![[Yoyo]]:
 
@@ -8641,14 +8638,12 @@ When a Coen sister is asked what kind of animal is she, she immediately answers-
 </pre>
 </div>
 <div created="20200213180145409" modified="20200213180416623" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
-<pre>
-[img[pictures/meshanim.jpg]]
+<pre>[img[pictures/meshanim.jpg]]
 
  &lt;&lt;heblink [[משנים]]&gt;&gt;</pre>
 </div>
 <div created="20200215103047710" modified="20200215103655782" tags="[[Outer sisters]] Films" title="Charlie Kaufman">
-<pre>
-[img[pictures/charlie-kaufman.jpg]]
+<pre>[img[pictures/charlie-kaufman.jpg]]
 
 !!![[Yoyo]]:
 
@@ -8658,8 +8653,7 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
 . </pre>
 </div>
 <div created="20200215122951144" modified="20200215124616856" tags="[[Dandan went]] Houses [[Dreams we have dreamt]] Laundry [[True stories]]" title="Chez Finnie`s">
-<pre>
-!!![[Yoyo]]:
+<pre>!!![[Yoyo]]:
 
 Couple of days ago, [[we received|Coen Sisters]] a letter from [[Dandan]], after not hearing from him for about a year. I love him so much and I miss him. With his permission, I'm pasting the letter here:
 
@@ -8689,9 +8683,8 @@ Dandan
 
 </pre>
 </div>
-<div created="20200215115804719" modified="20200215121559190" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens" title="Chez Panisse">
-<pre>
-!!![[Yoyo]]:
+<div created="20200215115804719" modified="20200215125404801" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens" title="Chez Panisse">
+<pre>!!![[Yoyo]]:
 
 Yes- [[he|Dandan]] wrote us another letter (August 2017), and I'm pasting it here as well:
 
@@ -8783,8 +8776,7 @@ Be good.
 </pre>
 </div>
 <div created="20200213203133252" modified="20200213203354401" tags="[[Here in the Ghetto]] Coffee [[Food addicts]]" title="Coffee and Candies">
-<pre>
-[img[pictures/cafe-vemamtakim.jpg]]
+<pre>[img[pictures/cafe-vemamtakim.jpg]]
 
  &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
 </div>
@@ -8796,8 +8788,7 @@ Be good.
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
 <div created="20200215120453473" modified="20200215122630916" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
-<pre>
-[img[pictures/dandan.jpg]]
+<pre>[img[pictures/dandan.jpg]]
 
  &lt;&lt;heblink [[דןדן]]&gt;&gt;
 
@@ -8814,8 +8805,7 @@ Be good.
 </pre>
 </div>
 <div created="20200215124658821" modified="20200215124822177" tags="[[Coen sister]]" title="Daniel">
-<pre>
-[img[pictures/29wJW52SFPcRk5HR.jpg]]
+<pre>[img[pictures/29wJW52SFPcRk5HR.jpg]]
 
  &lt;&lt;heblink [[דניאל]]&gt;&gt;</pre>
 </div>
@@ -8825,8 +8815,7 @@ Be good.
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
 <div created="20200215113637898" modified="20200215113839589" tags="Meals Coffee [[Coffee shops]] [[The kitchen according to Genevieve]] Restaurants" title="Delicatessen Chez Genevieve">
-<pre>
-[img[pictures/delicatessen.jpg]]
+<pre>[img[pictures/delicatessen.jpg]]
 
 
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
@@ -8838,8 +8827,7 @@ Be good.
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
 <div created="20200213182904861" modified="20200213183106268" tags="Children [[The team]]" title="Dreams we have dreamt">
-<pre>
-[img[pictures/chalomot-shechalamnoo.jpg]]
+<pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Dreams we have dreamt]]&quot;&gt;&gt;
 
@@ -8962,8 +8950,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200215101749821" modified="20200215102128095" tags="[[In the Animal Farm]]" title="Horses to Glue">
-<pre>
-[img[pictures/soosim-ledevek.jpg]]
+<pre>[img[pictures/soosim-ledevek.jpg]]
 
 ''In the animal farm'', when the horses turn useless, the pigs and the dogs send them to the glue factory.
 
@@ -8989,8 +8976,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200213211047243" modified="20200215110006803" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
-<pre>
-[img[pictures/histeriyot.jpg]]
+<pre>[img[pictures/histeriyot.jpg]]
 
 !!![[Iry and Gura]]:
 
@@ -9162,8 +9148,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200215115312612" modified="20200215115447306" tags="Recipes [[Food addicts]] Meals" title="Matza balls soup">
-<pre>
-[img[pictures/marak-im-kneydalach.jpg]]
+<pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 
  &lt;&lt;heblink [[מרק עם קניידלך]]&gt;&gt;
@@ -9187,8 +9172,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200213213011829" modified="20200213213247279" tags="Mothers [[Monkeys with car keys]]" title="Menopause sisters">
-<pre>
-[img[pictures/bloot-sisters.jpg]]
+<pre>[img[pictures/bloot-sisters.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Menopause sisters]]&quot;&gt;&gt;
 
@@ -9251,8 +9235,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200213203558719" modified="20200213204746946" tags="[[True stories]] Mothers" title="My Mother">
-<pre>
-[img[pictures/ima-sheli-iri.jpg]]
+<pre>[img[pictures/ima-sheli-iri.jpg]]
 
 !!![[Iry]]:
 
@@ -9267,8 +9250,7 @@ It's difficult for me at this point of life to think about relations.
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
 </div>
 <div created="20200213180740266" modified="20200213212640944" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
-<pre>
-[img[pictures/northern-exposure.jpg]]
+<pre>[img[pictures/northern-exposure.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Northern Exposure ]]&quot;&gt;&gt;
 
@@ -9314,8 +9296,7 @@ He did his best at raising us as good people, and in most cases he even succeede
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
 <div created="20200215104941835" modified="20200215105450147" tags="Mothers Films [[Outer sisters]]" title="Pedro Almodóvar">
-<pre>
-[img[pictures/pedro-almodovar.jpg]]
+<pre>[img[pictures/pedro-almodovar.jpg]]
 
 !!![[Gura]]:
 
@@ -9334,14 +9315,12 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 </pre>
 </div>
 <div created="20200213181241224" modified="20200213181359354" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
-<pre>
-[img[pictures/pina-bausch.jpg]]
+<pre>[img[pictures/pina-bausch.jpg]]
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
 <div created="20200213204850477" modified="20200213212548516" tags="[[Outer sisters]] Music Films" title="Prince">
-<pre>
-[img[pictures/prince.jpg]]
+<pre>[img[pictures/prince.jpg]]
 
 
 !!![[The team]]:
@@ -9383,8 +9362,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
 <div created="20200215111759981" modified="20200215115526369" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
-<pre>
-[img[pictures/aruchat-rosh-hashana.jpg]]
+<pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9430,7 +9408,6 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 </div>
 <div created="20200215103830870" modified="20200215124752573" tags="[[Outer sisters]] Films" title="Spike Lee">
 <pre>
-
 [img[pictures/spike-lee.jpg]]
 
 !!![[Gura]]:
@@ -9473,8 +9450,7 @@ And I say:
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
 </div>
 <div created="20200215105718382" modified="20200215121523220" tags="[[TV Series]] TV" title="The Bridge">
-<pre>
-[img[pictures/hagesher.jpg]]
+<pre>[img[pictures/hagesher.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9487,8 +9463,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200215114029313" modified="20200215114214451" tags="Restaurants Meals [[Food addicts]] Kitchens [[The kitchen according to Genevieve]]" title="The Couscous">
-<pre>
-[img[pictures/hacouscous.jpg]]
+<pre>[img[pictures/hacouscous.jpg]]
 
 
  &lt;&lt;heblink [[הקוסקוס]]&gt;&gt;
@@ -9497,8 +9472,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200215114358738" modified="20200215114518763" tags="[[The Sopranos]] TV [[TV Series]] [[On the road to somewhere]]" title="The end stays open">
-<pre>
-[img[pictures/sof-hasopranos.jpg]]
+<pre>[img[pictures/sof-hasopranos.jpg]]
 
  &lt;&lt;heblink [[הסוף נשאר פתוח]]&gt;&gt;
 
@@ -9524,8 +9498,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 </pre>
 </div>
 <div created="20200213212257979" modified="20200213212926793" tags="[[Monkeys with car keys]] [[Iry and Gura]] [[Iry claims]]" title="The global village">
-<pre>
-[img[pictures/hacfar-haglobaly.jpg]]
+<pre>[img[pictures/hacfar-haglobaly.jpg]]
 
  &lt;&lt;heblink [[הכפר הגלובלי]]&gt;&gt;</pre>
 </div>
@@ -9548,8 +9521,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 </pre>
 </div>
 <div created="20200215093007979" modified="20200215093300983" tags="[[In the Animal Farm]]" title="The right hand doesn't know">
-<pre>
-[img[pictures/yad-yamin.jpg]]
+<pre>[img[pictures/yad-yamin.jpg]]
 
 ''In the animal farm'', the right hand doesn't know, what the left hand is doing (and the other way around)
 
@@ -9594,8 +9566,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
  &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
 </div>
 <div created="20200215093552197" modified="20200215094542487" tags="[[In the Animal Farm]]" title="They cut down trees">
-<pre>
-[img[pictures/kortim-ezim.jpg]]
+<pre>[img[pictures/kortim-ezim.jpg]]
 
 ''In the animal farm'', the pigs and the dogs cut down trees, to make more space for building high tall.
 
@@ -9604,16 +9575,14 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 </pre>
 </div>
 <div created="20200215094638393" modified="20200215094853962" tags="[[In the Animal Farm]]" title="They feed the conscience">
-<pre>
-[img[pictures/shalom-batooki.jpg]]
+<pre>[img[pictures/shalom-batooki.jpg]]
 
 ''In the animal farm'', they feed the conscience empty calories.
 
  &lt;&lt;heblink [[מאכילים את המצפון]]&gt;&gt;</pre>
 </div>
 <div created="20200215095124478" modified="20200215095333701" tags="[[In the Animal Farm]]" title="They give away cell phones">
-<pre>
-[img[pictures/mechalkim-nayadim.jpg]]
+<pre>[img[pictures/mechalkim-nayadim.jpg]]
 
 ''In the animal farm'', with funn they give away cell phones.
 
@@ -9623,8 +9592,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 </pre>
 </div>
 <div created="20200215101333765" modified="20200215102145432" tags="[[In the Animal Farm]]" title="They make an effort not to overdue">
-<pre>
-[img[pictures/lo-chazirit.jpg]]
+<pre>[img[pictures/lo-chazirit.jpg]]
 ''
 In the animal farm'', they make an effort not to exaggerate with the freedom of speech.
 
@@ -9634,8 +9602,7 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 </pre>
 </div>
 <div created="20200215102105896" modified="20200215102523188" tags="[[In the Animal Farm]]" title="They make peace">
-<pre>
-[img[pictures/clavzirim-osim-shalom.jpg]]
+<pre>[img[pictures/clavzirim-osim-shalom.jpg]]
 
 ''In the animal farm'',  Dogpigs make peace.
 
@@ -9690,8 +9657,7 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
 </div>
 <div created="20200213175731975" modified="20200213175948693" tags="[[Outer sisters]] Films" title="Wes Anderson">
-<pre>
-[img[pictures/wes-anderson.jpg]]
+<pre>[img[pictures/wes-anderson.jpg]]
 
  &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
 </pre>
